--- a/early-emacs.org
+++ b/early-emacs.org
@@ -1,7 +1,20 @@
 * Load melpa
 #+BEGIN_SRC emacs-lisp
   (require 'package)
-  (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/"))
+  (let* ((no-ssl (and (memq system-type '(windows-nt ms-dos))
+  (not (gnutls-available-p))))
+	 (proto (if no-ssl "http" "https")))
+    ;; Comment/uncomment these two lines to enable/disable MELPA and MELPA Stable as desired
+    (add-to-list 'package-archives (cons "melpa" (concat proto "://melpa.org/packages/")) t)
+    ;;(add-to-list 'package-archives (cons "melpa-stable" (concat proto "://stable.melpa.org/packages/")) t)
+    (when (< emacs-major-version 24)
+      ;; For important compatibility libraries like cl-lib
+      (add-to-list 'package-archives '("gnu" . (concat proto "://elpa.gnu.org/packages/")))))
   (package-initialize)
+
+  ;;  (require 'package)
+  ;; (add-to-list 'package-archives '("melpa" . "http://melpa.org/packages/"))
+  ;;  (add-to-list 'package-archives '("melpa-" . "http://melpa.org/packages/"))
+  ;;  (package-initialize)
 #+END_SRC
 
