Piet/utf8 support

--- a/init.org
+++ b/init.org
@@ -249,22 +249,42 @@ Check link: https://support.brother.com/g/b/downloadtop.aspx?c=dk&lang=da&prod=h
 You may find `M-x list-faces-display` or `M-x list-colors-display` helpful. And `C-u C-x =` to check data under cursor. Or even: `customize-face`.
 
 #+BEGIN_SRC emacs-lisp
-  (prefer-coding-system 'utf-8)
-  (set-language-environment "UTF-8")
-  (set-default-coding-systems 'utf-8-unix)
+(prefer-coding-system 'utf-8)
+(set-language-environment "UTF-8")
+(set-default-coding-systems 'utf-8-unix)
 
-  ;; Font test: ℕ𝓟⧺×≠≥≤±¬∨∧∃∀λ⟿⟹⊥⊤⊢
+;; Font test: ℕ𝓟⧺×≠≥≤±¬∨∧∃∀λ⟿⟹⊥⊤⊢
+;; Font emoji test: ❤🧡💛💚💙💜 🫀
 
-  (set-face-attribute 'default nil :family "Noto Mono")
-  ;; (set-frame-font "Noto Mono 13" nil t)
+(set-face-attribute 'default nil :family "Noto Mono")
+;; (set-frame-font "Noto Mono 13" nil t)
 
-  ;; (set-fontset-font t 'unicode (font-spec :family "Noto Mono" :height 100) nil 'append)
+;; (set-fontset-font t 'unicode (font-spec :family "Noto Mono" :height 100) nil 'append)
 
-  ;; DejaVu Sans Mono ; Noto Mono ; Roboto Mono
+;; DejaVu Sans Mono ; Noto Mono ; Roboto Mono
 
-  (custom-set-faces
-   '(default ((t :foreground "white"))))
+(custom-set-faces
+ '(default ((t (:foreground "white" :stipple nil :weight normal :height 150 :width normal))))
+ '(variable-pitch ((t (:family "Noto Sans" :height 150 :weight light)))))
 
+(if (>= emacs-major-version 27)
+    (set-fontset-font t '(#x2764 . #x2764)
+              (font-spec :family "Noto Color Emoji")))
+(if (>= emacs-major-version 27)
+    (set-fontset-font t '(#x1f499 . #x1f49c)
+              (font-spec :family "Noto Color Emoji")))
+(if (>= emacs-major-version 27)
+    (set-fontset-font t '(#x1f7e5 . #x1f9e1)
+              (font-spec :family "Noto Color Emoji")))
+(if (>= emacs-major-version 27)
+    (set-fontset-font t '(#x1f534 . #x1f535)
+              (font-spec :family "Noto Color Emoji")))
+(if (>= emacs-major-version 27)
+    (set-fontset-font t '(#x1f7e0 . #x1f7e3)
+              (font-spec :family "Noto Color Emoji")))
+(if (>= emacs-major-version 27)
+    (set-fontset-font t '(#x26aa . #x26ab)
+              (font-spec :family "Noto Color Emoji")))
 #+END_SRC
 
 ** Font-lock-*
